<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".App_Info_Page">

    <include
        android:id="@+id/xml.toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/appInfoTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/graduate"
        android:paddingHorizontal="10dp"
        android:text="@string/app_info_text_title"
        android:textColor="@color/list_background"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xml.toolbar"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/appDescriptionTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/graduate"
        android:text="@string/app_info_description"
        android:textColor="@color/list_background"
        android:textSize="16sp"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appInfoTextview"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/appDisclaimerTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/graduate"
        android:paddingHorizontal="10dp"
        android:text="@string/app_info_disclaimer"
        android:textColor="@color/list_background"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appDescriptionTextview"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/appInfoVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/graduate"
        android:paddingHorizontal="10dp"
        android:text="@string/current_version"
        android:textColor="@color/list_background"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appChartCredit"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/appChartCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/graduate"
        android:paddingHorizontal="10dp"
        android:text="@string/app_info_chart_credit"
        android:textColor="@color/list_background"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appDisclaimerTextview"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/appEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/graduate"
        android:paddingHorizontal="10dp"
        android:text="@string/app_info_email"
        android:textColor="@color/list_background"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appInfoVersion"
        app:layout_constraintVertical_bias="0.176" />

</androidx.constraintlayout.widget.ConstraintLayout>