<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InjuryRollDescriptions">

    <include
        android:id="@+id/xml.toolbar"
        layout="@layout/toolbar" />

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/list_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/xml.toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/injuryRollNumbers2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/graduate"
                android:text="@string/injuryRoll2"
                android:textAlignment="center"
                android:textColor="@color/tanAccent"
                android:textSize="96sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.113" />

            <TextView
                android:id="@+id/injuryRollHeaders2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/graduate"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/injuryRollStunned"
                android:textAlignment="center"
                android:textColor="@color/tanAccent"
                android:textSize="48sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/injuryRollNumbers2"
                app:layout_constraintVertical_bias="0.16" />

            <TextView
                android:id="@+id/injuryRollDescriptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/graduate"
                android:padding="30dp"
                android:text="@string/injuryRollStunnedFull"
                android:textAlignment="center"
                android:textColor="@color/tanAccent"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/injuryRollHeaders2"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>